# nanograph

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  release.yml
crates/nanograph/: Cargo.toml
crates/nanograph-cli/: Cargo.toml
crates/nanograph-cli/src/: config.rs  main.rs  metadata.rs  schema_ops.rs  tests.rs
crates/nanograph-cli/tests/: bug_regressions.rs  config_and_aliases.rs  docs_and_output.rs  graph_mirror.rs  namespace_lineage.rs  revops_admin_and_cdc.rs
crates/nanograph-ffi/: Cargo.toml
crates/nanograph-ffi/include/: nanograph_ffi.h
crates/nanograph-ffi/src/: lib.rs
crates/nanograph-ffi/swift/: Package.swift  README.md
crates/nanograph-ts/: Cargo.toml  README.md  index.js  package.json  types.d.ts
crates/nanograph-ts/__test__/: index.spec.mjs
crates/nanograph-ts/src/: convert.rs  lib.rs
crates/nanograph/src/: embedding.rs  json_output.rs  lib.rs  query_input.rs  result.rs
docs/: README.md
docs/dev/: architecture-issues.md  backlog.md  embeddable-api.md  embeddings-issue.md  id-collision.md  lance3.md  release-checklist.md  release-notes-v1.2.2.md  swift-sdk.md  swift-split-repo.md  typescript-sdk.md
docs/user/: best-practices.md  blobs.md  cli-reference.md  config.md  context-graph-example.md  lance-migration.md  queries.md  quick-start.md  schema.md  search.md  skills.md  starwars-example.md
examples/codebase/: README.md  codebase.gq  codebase.jsonl  codebase.pg  nanograph.toml
examples/revops/: README.md  nanograph.toml  revops.jsonl
examples/starwars/: README.md  starwars.pg
tools/swift-package/: build_xcframework.sh  render_package.sh
tools/ts-sdk/: smoke_test_consumer.sh
(+44 files in other folders)
